Layout bug fix

--- a/src/ui/scss/root.scss
+++ b/src/ui/scss/root.scss
@@ -73,8 +73,7 @@ footer {
   width: 100%;
   height: fit-content;
   @extend .flex-column;
-  margin: 0;
-  padding: 1rem;
+  padding: 1rem 0;
   text-align: center;
   border-top: 3px solid colors.$brand-accent;
   background-color: colors.$brand-background;
